Fixed scroll spacing on mobile viewports

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -827,7 +827,7 @@ ol{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 20%;
+    margin-top: 25%;
     cursor: pointer;
 }
 
